--- a/components/event-detail/logistics-item.module.css
+++ b/components/event-detail/logistics-item.module.css
@@ -2,7 +2,7 @@
     display: flex;
     font-size: 1.5rem;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     text-align: center;
     color: #aefff8;
   }
@@ -25,5 +25,6 @@
     .item {
       align-items: flex-start;
       text-align: left;
+      flex-direction: column;
     }
   }
